--- a/src/components/tabs/_tabs.scss
+++ b/src/components/tabs/_tabs.scss
@@ -867,7 +867,7 @@ html[dir='rtl'] {
     }
 
     .tab-more {
-      padding: 12px 14px 11px 4px;
+      padding: 10px 11px 11px 0;
 
       &::before {
         left: auto;
